docs/pages/versions/v54.0.0/sdk/calendar.mdx
---
title: 日历
description: 一个提供用于与设备的系统日历、事件、提醒及相关记录进行交互的 API 的库。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-54/packages/expo-calendar'
packageName: 'expo-calendar'
platforms: ['android', 'ios', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { AndroidPermissions, IOSPermissions } from '~/components/plugins/permissions';
import {
  ConfigReactNative,
  ConfigPluginExample,
  ConfigPluginProperties,
} from '~/ui/components/ConfigSection';
import { SnackInline } from '~/ui/components/Snippet';

`expo-calendar` 提供了一个用于与设备系统日历、事件、提醒事项及相关记录交互的 API。

此外，它还提供了启动[系统提供的日历 UI](#launching-system-provided-calendar-dialogs)的方法，以允许用户查看或编辑事件。在 Android 上，这些方法会使用 Intent 启动系统日历应用。在 iOS 上，它们会以模态方式呈现 [`EKEventViewController`](https://developer.apple.com/documentation/eventkitui/ekeventviewcontroller) 或 [`EKEventEditViewController`](https://developer.apple.com/documentation/eventkitui/ekeventeditviewcontroller)。

## 安装

<APIInstallSection />

## 在应用配置中进行配置

如果你在项目中使用 config plugins（[持续原生生成（CNG）](/workflow/continuous-native-generation/)），可以使用 `expo-calendar` 内置的 [配置插件](/config-plugins/introduction/)来进行配置。该插件允许你配置运行时无法设置的各种属性，这些属性需要构建新的应用二进制文件后才会生效。如果你的应用**不**使用 CNG，那么你需要手动配置该库。

<ConfigPluginExample>

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-calendar",
        {
          "calendarPermission": "应用需要访问你的日历。"
        }
      ]
    ]
  }
}
```

</ConfigPluginExample>

<ConfigPluginProperties
  properties={[
    {
      name: 'calendarPermission',
      platform: 'ios',
      description: '设置 [`NSCalendarsUsageDescription`](#ios) 权限消息的字符串。',
      default: '"允许 $(PRODUCT_NAME) 访问你的日历"',
    },
    {
      name: 'remindersPermission',
      platform: 'ios',
      description: '设置 [`NSRemindersUsageDescription`](#ios) 权限消息的字符串。',
      default: '"允许 $(PRODUCT_NAME) 访问你的提醒事项"',
    },
  ]}
/>

<ConfigReactNative>

如果你没有使用持续原生生成（[CNG](/workflow/continuous-native-generation/)）（而是手动使用原生 **android** 和 **ios** 项目），那么你需要在原生项目中配置以下权限：

- 对于 Android，请将 `android.permission.READ_CALENDAR` 和 `android.permission.WRITE_CALENDAR` 权限添加到你项目的 **android/app/src/main/AndroidManifest.xml** 中：

  ```xml
  <uses-permission android:name="android.permission.READ_CALENDAR" />
  <uses-permission android:name="android.permission.WRITE_CALENDAR" />
  ```

- 对于 iOS，请将 `NSCalendarsUsageDescription` 和 `NSRemindersUsageDescription` 添加到你项目的 **ios/[app]/Info.plist** 中：

  ```xml
  <key>NSCalendarsUsageDescription</key>
  <string>允许 $(PRODUCT_NAME) 访问你的日历</string>
  <key>NSRemindersUsageDescription</key>
  <string>允许 $(PRODUCT_NAME) 访问你的提醒事项</string>
  ```

</ConfigReactNative>

## 用法

<SnackInline label='Basic Calendar usage' dependencies={['expo-calendar']}>

```jsx
import { useEffect } from 'react';
import { StyleSheet, View, Text, Button, Platform } from 'react-native';
import * as Calendar from 'expo-calendar';

export default function App() {
  useEffect(() => {
    (async () => {
      const { status } = await Calendar.requestCalendarPermissionsAsync();
      if (status === 'granted') {
        const calendars = await Calendar.getCalendarsAsync(Calendar.EntityTypes.EVENT);
        console.log('这里是你所有的日历：');
        console.log({ calendars });
      }
    })();
  }, []);

  return (
    <View style={styles.container}>
      <Text>日历模块示例</Text>
      <Button title="创建一个新日历" onPress={createCalendar} />
    </View>
  );
}

async function getDefaultCalendarSource() {
  const defaultCalendar = await Calendar.getDefaultCalendarAsync();
  return defaultCalendar.source;
}

async function createCalendar() {
  const defaultCalendarSource =
    Platform.OS === 'ios'
      ? await getDefaultCalendarSource()
      : { isLocalAccount: true, name: 'Expo Calendar' };
  const newCalendarID = await Calendar.createCalendarAsync({
    title: 'Expo Calendar',
    color: 'blue',
    entityType: Calendar.EntityTypes.EVENT,
    sourceId: defaultCalendarSource.id,
    source: defaultCalendarSource,
    name: 'internalCalendarName',
    ownerAccount: 'personal',
    accessLevel: Calendar.CalendarAccessLevel.OWNER,
  });
  console.log(`你的新日历 ID 是：${newCalendarID}`);
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    backgroundColor: '#fff',
    alignItems: 'center',
    justifyContent: 'space-around',
  },
});
```

</SnackInline>

## API

```js
import * as Calendar from 'expo-calendar';
```

<APISection
  packageName="expo-calendar"
  apiName="Calendar"
  headersMapping={{
    systemProvidedUI: '启动系统提供的日历对话框',
  }}
/>

## 权限

### Android

如果你只打算使用[系统提供的日历 UI](#launching-system-provided-calendar-dialogs)，则不需要请求任何权限。

否则，你必须将以下权限添加到 **app.json** 中 [`expo.android.permissions`](../config/app/#permissions) 数组里。

<AndroidPermissions permissions={['READ_CALENDAR', 'WRITE_CALENDAR']} />

### iOS

如果你只打算使用系统提供的日历 UI，并通过 [`createEventInCalendarAsync`](#createeventincalendarasynceventdata-presentationoptions) 创建事件，则不需要请求权限。

此库使用以下用途说明键：

<IOSPermissions permissions={['NSCalendarsUsageDescription', 'NSRemindersUsageDescription']} />
